@@ -13,8 +13,8 @@ module Types.Key (
 	stubKey,
 	key2file,
 	file2key,
-	isChunkKey,
 	nonChunkKey,
+	chunkKeyOffset,
 
 	prop_idempotent_key_encode,
 	prop_idempotent_key_decode
@@ -49,15 +49,18 @@ stubKey = Key
 	, keyChunkNum = Nothing
 	}
 
-isChunkKey :: Key -> Bool 
-isChunkKey k = isJust (keyChunkSize k) && isJust (keyChunkNum k) 
-
 -- Gets the parent of a chunk key.
 nonChunkKey :: Key -> Key
 nonChunkKey k = k
 	{ keyChunkSize = Nothing
 	, keyChunkNum = Nothing
 	}
+
+-- Where a chunk key is offset within its parent.
+chunkKeyOffset :: Key -> Maybe Integer
+chunkKeyOffset k = (*)
+	<$> keyChunkSize k
+	<*> (pred <$> keyChunkNum k)
 
 fieldSep :: Char
 fieldSep = '-'
