@@ -4,6 +4,8 @@ chunks that are stored on the remote.
 This can be useful to work around limitations on the size of files
 on the remote.
 
+Chunking also allows for resuming interrupted downloads and uploads.
+
 Note that git-annex has to buffer chunks in memory before they are sent to
 a remote. So, using a large chunk size will make it use more memory.
 
